Fix scrollbar visibility and add smooth scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,19 @@
   box-sizing: border-box;
 }
 
+
+
+html {
+  scroll-behavior: smooth;
+}
+
+
+
+body::-webkit-scrollbar {
+  display: none; /* Hide the scrollbar */
+}
+
+
 /* HEADER */
 
 /* .banner {
